--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,18 @@ html, body {
   margin: 0 auto;
 }
 
+.main .main__about {
+  padding: 180px 0 160px;
+}
+
+.main .main__directions {
+  padding-bottom: 180px;
+}
+
+.main .main__cert {
+  padding-bottom: -46px;
+}
+
 .button {
   display: inline-block;
   font-weight: 700;
@@ -263,9 +275,6 @@ html, body {
 }
 
 /* ======================================================================= */
-.about {
-  padding: 180px 0 160px;
-}
 
 .about__inner {
   min-width: 1230px;
@@ -370,9 +379,6 @@ html, body {
 
 /* ======================================================================= */
 
-.directions {
-  padding-bottom: 180px;
-}
 
 .directions__inner {
   position: relative;
@@ -567,25 +573,36 @@ html, body {
 
 /* ============================================================================ */
 
-.certificate {
-  padding-bottom: 120px;
-}
 
 .container {}
 
-.certificate__inner {
+.cert__inner {
   display: flex;
+  justify-content: space-between;
+  position: relative;
 }
 
-.certificate__content {
-  margin-right: 130px;
+.cert__inner::after {
+  content: "";
+  display: block;
+  position: absolute;
+  top: -15px;
+  left: -190px;
+  width: 60px;
+  height: 60px;
+  background: url(../images/decor/4.svg) 0 0 no-repeat;
 }
 
-.certificate__heading {
+.cert__content {
+  margin-right: 30px;
+  max-width: 397px;
+}
+
+.cert__heading {
   margin-bottom: 48px;
 }
 
-.certificate__text {
+.cert__text {
   color: #424551;
   font-weight: 400;
   line-height: 160%;
@@ -594,22 +611,22 @@ html, body {
   margin-bottom: 32px;
 }
 
-.certificate__paragraph {}
-
-.certificate__img-box {
+.cert__logos {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
 }
 
-.certificate__img-box:last-child {
+.cert__logos:last-child {
   margin-right: 0px;
 }
 
-.certificate__image {
+.cert__image-box {
+  box-shadow: 0px 80px 80px -20px rgba(154, 156, 165, 0.16), 0px 30px 24px -10px rgba(154, 156, 165, 0.1), 0px 12px 10px -6px rgba(154, 156, 165, 0.08), 0px 4px 4px -4px rgba(30, 33, 44, 0.05);
+}
+
+.cert__image-box img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
-  border-radius: 4px;
-  overflow: hidden;
+  object-fit: contain;
 }
