--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,13 @@ html, body {
   padding-bottom: 195px;
 }
 
+.main__companies {
+  padding-bottom: 177px;
+}
+
+.main__program {
+  padding: 115px 185px;
+}
 
 .button {
   display: inline-block;
@@ -814,7 +821,7 @@ html, body {
   height: 816px;
 }
 
-.testimonials__inner{
+.testimonials__inner {
   position: relative;
   z-index: 1;
 }
@@ -981,3 +988,139 @@ html, body {
   background-color: #424551;
   transition: all .3s;
 }
+
+/* ================================================================ */
+
+.companies {
+  background: #f4f5f7;
+}
+
+.companies__inner {
+  position: relative;
+}
+
+.companies__inner::before {
+  content: "";
+  position: absolute;
+  left: -200px;
+  bottom: -120px;
+  background: url("../images/decor/5.svg") 0 0 / 100% no-repeat;
+  width: 90px;
+  height: 90px;
+}
+
+.companies__heading {
+  margin-bottom: 60px;
+}
+
+.heading {}
+
+.heading--text-center {}
+
+.heading__subtitle {}
+
+.heading__title {}
+
+.companies__grid {
+  display: grid;
+  grid-template: repeat(2, auto) / repeat(6, 1fr);
+  gap: 40px 100px;
+}
+
+.companies__grid-item {}
+
+.companies__grid-link {
+  display: block;
+}
+
+.companies__grid-link img {
+  width: 100%;
+  height: 100%;
+  filter: grayscale(1);
+  opacity: .4;
+  transition: all 1.3s;
+}
+
+.companies__grid-link:hover img {
+  filter: grayscale(0);
+  opacity: 1;
+  transition: all .3s;
+}
+
+/* ========================================================== */
+
+
+.program {}
+
+.program__inner {
+  display: flex;
+  justify-content: space-between;
+}
+
+.program__content {
+  min-width: 600px;
+  margin-right: 30px;
+}
+
+.program__heading {
+  margin-bottom: 60px;
+}
+
+.program__acc {}
+
+.program__acc-item {
+  margin-bottom: 24px;
+}
+
+.program__acc-link {
+  display: block;
+  padding-left: 40px;
+}
+
+.program__acc-item:last-child {
+  margin-bottom: 0px;
+}
+
+.program__acc-head {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 150%;
+  color: #1e212c;
+  margin-right: 8px;
+  position: relative;
+}
+
+.program__acc-head span {
+  font-weight: 400;
+  color: #ff3f3a;
+}
+
+.program__acc-head::before,
+.program__acc-head::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: -40px;
+  width: 18px;
+  height: 2px;
+  background-color: #ff3f3a;
+  border-radius: 2px;
+}
+
+
+.program__acc-head::after {
+  transform: rotate(90deg);
+  transition: all .3s;
+}
+
+
+
+.program__acc-text {
+  margin-top: 16px;
+}
+
+.program__acc-link--active .program__acc-head::after {
+  transform: rotate(0deg);
+}
+
+.program__image {}
