--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,18 @@ html, body {
   padding: 115px 185px;
 }
 
+.main__blog {
+  padding-bottom: 200px;
+}
+
+.main__info {
+  padding-bottom: 180px;
+}
+
+.main__questions {
+  padding-bottom: 180px;
+}
+
 .button {
   display: inline-block;
   font-weight: 700;
@@ -594,8 +606,6 @@ html, body {
 /* ============================================================================ */
 
 
-.container {}
-
 .cert__inner {
   display: flex;
   justify-content: space-between;
@@ -1013,13 +1023,6 @@ html, body {
   margin-bottom: 60px;
 }
 
-.heading {}
-
-.heading--text-center {}
-
-.heading__subtitle {}
-
-.heading__title {}
 
 .companies__grid {
   display: grid;
@@ -1027,7 +1030,6 @@ html, body {
   gap: 40px 100px;
 }
 
-.companies__grid-item {}
 
 .companies__grid-link {
   display: block;
@@ -1050,11 +1052,11 @@ html, body {
 /* ========================================================== */
 
 
-.program {}
 
 .program__inner {
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
 .program__content {
@@ -1066,7 +1068,6 @@ html, body {
   margin-bottom: 60px;
 }
 
-.program__acc {}
 
 .program__acc-item {
   margin-bottom: 24px;
@@ -1113,8 +1114,6 @@ html, body {
   transition: all .3s;
 }
 
-
-
 .program__acc-text {
   margin-top: 16px;
 }
@@ -1123,4 +1122,408 @@ html, body {
   transform: rotate(0deg);
 }
 
-.program__image {}
+/* ============================================================= */
+
+
+
+.blog__top {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  margin-bottom: 60px;
+}
+
+.blog__heading {
+  margin-right: 30px;
+}
+
+
+.blog__row {
+  display: flex;
+  margin: 0 -15px;
+}
+
+.blog__item {
+  padding: 0 15px;
+}
+
+.blog__item-link {
+  display: block;
+  transition: all 1.3s;
+}
+
+.blog__item-link:hover {
+  box-shadow: 0px 1px 20px 10px rgb(101 103 109 / 25%);
+  transition: all .3s;
+}
+
+.blog__item-link:hover .blog__item-btn {
+  color: rgb(255, 63, 58);
+  transition: all .3s;
+}
+
+
+.blog__image-box {
+  border: radius 4px;
+  overflow: hidden;
+  position: relative;
+}
+
+.blog__image-box img {
+  width: 390px;
+  height: 300px;
+  object-fit: cover;
+  margin-bottom: 16px;
+}
+
+.blog__image-box span {
+  display: flex;
+  align-items: center;
+  position: absolute;
+  top: 12px;
+  left: 12px;
+  background: #fff;
+  border-radius: 4px;
+  padding: 1px 8px;
+}
+
+.blog__image-box span::before {
+  content: "";
+  display: block;
+  align-items: center;
+  width: 16px;
+  height: 16px;
+  margin-right: 4px;
+}
+
+.blog__item-content {}
+
+.blog__item-info {
+  display: flex;
+  margin: 0 -12px 8px;
+}
+
+.blog__info-el {
+  padding: 0 12px;
+  position: relative;
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 150%;
+  color: #787a80;
+}
+
+.blog__info-el::after {
+  content: '';
+  position: absolute;
+  top: 50%;
+  right: 0;
+  transform: translateY(-50%);
+  width: 1px;
+  height: 12px;
+  background-color: #787a80;
+}
+
+.blog__info-el:last-child::after {
+  content: none;
+}
+
+.blog__info-date {
+  display: flex;
+  align-items: center;
+}
+
+.blog__info-date::before {
+  content: "";
+  display: block;
+  width: 16px;
+  height: 15px;
+  background: url("../images/icons/calendar-icon.svg") 0 0 / 100% no-repeat;
+  margin-right: 9px;
+}
+
+.blog__info-time {
+  display: flex;
+  align-items: center;
+}
+
+.blog__info-time::before {
+  content: "";
+  display: block;
+  width: 16px;
+  height: 15px;
+  background: url("../images/icons/clock-icon.svg") 0 0 / 100% no-repeat;
+  margin-right: 9px;
+}
+
+.blog__item-title {
+  color: rgb(30, 33, 44);
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 150%;
+  margin-bottom: 8px;
+}
+
+.blog__item-text {
+  margin-bottom: 16px;
+}
+
+.blog__item-btn {
+  display: flex;
+  align-items: center;
+  font-weight: 700;
+  color: #1e212c;
+  transition: all 1.3s;
+}
+
+.blog__item-btn::after {
+  content: "";
+  width: 24px;
+  height: 24px;
+  background: url(../images/icons/arrow-right-red.svg) 0 0 / 100% no-repeat;
+  margin-left: 8px;
+}
+
+.blog__item--podcast .blog__image-box span::before {
+  background: url("../images/icons/podcast-icon.svg") 0 0 / 100% no-repeat;
+}
+
+.blog__item--video .blog__image-box span::before {
+  background: url("../images/icons/play-mini.svg") 0 0 / 100% no-repeat;
+}
+
+.blog__item--article .blog__image-box span::before {
+  background: url("../images/icons/article-icon.svg") 0 0 / 100% no-repeat;
+}
+
+/* ============================== INFO ============================== */
+/* ============================== INFO ============================== */
+
+.info {}
+
+.info__inner {
+  display: flex;
+  align-items: flex-end;
+  justify-content: space-between;
+}
+
+.info__content {
+  margin-right: 30px;
+}
+
+.info__heading {
+  margin-bottom: 40px;
+}
+
+.info__contacts {
+  margin-bottom: 50px;
+}
+
+.info__contacts-item {
+  margin-bottom: 24px;
+  padding-left: 34px;
+}
+
+.info__contacts-item:last-child {
+  margin-bottom: 0;
+}
+
+.info__item-top {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 150%;
+  color: #787A80;
+  position: relative;
+}
+
+.info__item-top::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: -36px;
+  width: 24px;
+  height: 24px;
+}
+
+.info__item-link {
+  font-size: 18px;
+  line-height: 150%;
+  transition: all .3s;
+}
+
+.info__item-link:hover {
+  color: #FF3F3A;
+}
+
+.info__mail .info__item-top::before {
+  background: url("../images/icons/chat-icon.svg") 0 0 / 100% no-repeat;
+}
+
+.info__tel .info__item-top::before {
+  background: url("../images/icons/phone-icon.svg") 0 0 / 100% no-repeat;
+}
+
+.info__address .info__item-top::before {
+  background: url("../images/icons/mark-icon.svg") 0 0 / 100% no-repeat;
+}
+
+.info__item-address {
+  font-size: 18px;
+  line-height: 150%;
+}
+
+.info__follow {}
+
+.info__follow-head {
+  font-weight: 700;
+  line-height: 150%;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  margin-bottom: 24px;
+}
+
+.info__socials {
+  display: flex;
+}
+
+.info__socials-item {
+  margin-right: 32px;
+}
+
+.info__socials-item:last-child {
+  margin-right: 0;
+}
+
+.info__socials-link path {
+  transition: all .3s;
+}
+
+.info__socials-link:hover path {
+  fill: #000;
+}
+
+.info__map {
+  height: 412px;
+  width: 100%;
+  max-width: 705px;
+  box-shadow: 0px 80px 80px -20px rgba(154, 156, 165, 0.08), 0px 30px 24px -10px rgba(154, 156, 165, 0.05), 0px 12px 10px -6px rgba(154, 156, 165, 0.04), 0px 4px 4px -4px rgba(30, 33, 44, 0.03);
+  border-radius: 4px;
+  overflow: hidden;
+}
+
+/* ============================== QUESTIONS ============================== */
+/* ============================== QUESTIONS ============================== */
+
+.questions {}
+
+.questions__inner {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.questions__img {
+  min-width: 350px;
+}
+
+.questions__img img {
+  height: 100%;
+  width: 100%;
+}
+
+.questions__content {
+  margin-left: 30px;
+}
+
+.questions__heading {
+  margin-bottom: 40px;
+}
+
+.questions__form {}
+
+.questions__form-row {
+  display: flex;
+  margin-bottom: 24px;
+}
+
+.questions__form-label {
+  margin-right: 25px;
+  flex: 1 1 auto;
+}
+
+.questions__form-label:last-child {
+  margin-right: 0;
+}
+
+.questions__text-label {
+  display: block;
+  margin-bottom: 50px;
+}
+
+.questions__form-input,
+.questions__form-text {
+  display: block;
+  border: 1px solid #D7DADD;
+  border-radius: 4px;
+  padding: 13px 16px;
+  width: 100%;
+  margin-top: 8px;
+}
+
+.questions__form-input::placeholder,
+.questions__form-text::placeholder {
+  color: #9A9CA5;
+}
+
+.questions__form-text {
+  resize: none;
+  height: 128px;
+}
+
+.questions__checkbox-label {
+  margin-right: 50px;
+  display: flex;
+  width: 100%;
+}
+
+.questions__form-checkbox {
+  position: relative;
+  width: 16px;
+  height: 16px;
+  flex: 0 0 auto;
+  margin-top: 5px;
+  margin: 5px 12px 0px 0px;
+}
+
+.questions__form-default {
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  position: absolute;
+  clip: rect(0, 0, 0, 0);
+}
+
+.questions__form-default:checked+.questions__form-custom {
+  background: url("../images/icons/check.svg") 50% 50% no-repeat, #FF3F3A;
+  border: 1px solid #FF3F3A;
+}
+
+.questions__form-custom {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  border: 1px solid #424551;
+  border-radius: 3px;
+  cursor: pointer;
+}
+
+.questions__form-btn {
+  width: 100%;
+  align-self: center;
+  text-align: center;
+  font-size: 16px;
+}
+
+/* ============================== FOOTER ============================== */
+/* ============================== FOOTER ============================== */
